[package]
name = "oci-digest"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[features]
hasher = ["dep:sha2"]
std = []

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
